[metadata]
name = kleides-mfa
description = Interface components to configure and manage multi factor authentication
url = https://github.com/ossobv/kleides-mfa
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = GNU General Public License v3
keywords = kleides django-otp two factor authentication 2fa
author = Harm Geerts
author_email = hgeerts@osso.nl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Web Environment
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django-otp>=0.7.0
setup_requires =
    setuptools_scm[toml]>=6.0.1

[options.extras_require]
docs =
    django-otp-yubikey
    readthedocs-sphinx-search==0.1.0
    Sphinx==4.0.3
    sphinx-rtd-theme==0.5.2
test =
    coverage
    django-otp-yubikey
    factory-boy
    pytest
    pytest-cov
    pytest-django

[options.packages.find]
exclude =
    build
    dist
    docs
    tests

[bdist_wheel]
universal = 1

[aliases]
